<resources>
    <string name="app_name">Demo App</string>
    <string name="action_settings">Settings</string>
    <string name="username_validation_error_message">Empty user name</string>
    <string name="cityname_validation_error_message">Empty City</string>

    <string name="city_invalid_provided_message">Invalid City Provided!</string>

    <string name="project_details">Google Projects</string>

    <!-- navigation drawer item labels  -->
    <string name="weather">Weather</string>
    <string name="project_list">Google Projects</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="please_wait">Please wait</string>
    <string name="project_list_ret_error"> Unable to show project list</string>
    <string name="project_details_ret_error">Unable to get Project details!</string>
    <string name="weather_error">Unable to show weather information now!</string>
    <string name="test_user">Test User</string>
    <string name="city_weather">This is the weather sample view. Fill the form below to get weather information and then touch the button below!</string>
    <string name="show_info">GO</string>
    <string name="nyc_usa">NYC, USA</string>
    <string name="example_city_name">City Full Name like \'NYC, USA\'</string>
    <string name="your_name">Your Name</string>

    <string-array name="nav_drawer_labels">
        <item>@string/project_list</item>
        <item>@string/weather</item>
    </string-array>
</resources>
