<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/weatherContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_weather"
            android:textSize="@dimen/regular_text_size"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textIsSelectable="false" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText android:id="@+id/userNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_user"
                android:textSize="@dimen/regular_text_size"
                android:hint="@string/your_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <EditText android:id="@+id/cityText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nyc_usa"
                android:textSize="@dimen/regular_text_size"
                android:hint="@string/example_city_name" />

        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btnShowInfo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/regular_text_size"
            android:text="@string/show_info" />

        <TextView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="100"
            android:scrollHorizontally="false"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text=""
            android:gravity="center"
            android:textSize="@dimen/regular_text_size"
            android:textIsSelectable="false" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>